trunk/Archive2/9c/5c1c548d95dc5b/output
main.cpp:3:22: error: invalid use of 'this' at top level
    typedef decltype(*this) self;
                      ^
main.cpp: In static member function 'static void Foo::bar()':
main.cpp:7:13: warning: unused variable 'ptr' [-Wunused-variable]
       self* ptr = nullptr;
             ^
