trunk/Archive2/9c/5c1c548d95dc5b/main.cpp
struct Foo
{
   typedef decltype(*this) self;

   static void bar()
   {
      self* ptr = nullptr;
   }
};